Fixed whitespace

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(255,235,205);
+    background-color: #FFEBCD;
 }
 
 h1 {
@@ -10,19 +10,19 @@ h1 {
     padding-top: 5px;
     color:rgb(0,0,0);
     font-size: x-large;
-    border-top: 2px solid rgb(100,100,100);
+    border-top: 2px solid #AAAAAA;
 }
 
 h1.header {
     display: block;
-    background-color: rgb(0, 120, 255);
-    color: rgb(255,255,255);
+    background-color: #005A9C;
+    color: #FFFFFF;
     font-family: Arial, Helvetica, sans-serif;
     font-size: xx-large;
     padding-left: 0px;
     padding-top: 0px;
     text-align: center;
-    border: 2px solid rgb(100,100,100);
+    border: 2px solid #AAAAAA;
     margin-left: 0%;
     margin: 0;
     position: fixed;
@@ -35,7 +35,7 @@ h2 {
     margin-left: 25%;
     padding-left: 20px;
     padding-top: 5px;
-    color: rgb(0,0,0);
+    color: #000000;
     font-size: large;
 }
 
@@ -44,14 +44,14 @@ h3 {
     margin-left: 25%;
     padding-left: 20px;
     padding-top: 5px;
-    color: rgb(0,0,0);
+    color: #000000;
     font-size: large;
 }
 
 p {
     margin-left: 25%;
     padding-left: 30px;
-    color: rgb(0,0,0);
+    color: #000000;
     line-height: 30px;
     font-size: large;
 }
@@ -68,8 +68,8 @@ ul {
     margin: 0;
     padding: 0;
     width: 25%;
-    background-color: rgb(255,235,205);
-    border: 2px solid rgb(100,100,100);
+    background-color: #FFEBCD;
+    border: 2px solid #AAAAAA;
     height: 100%;
     position: fixed;
     overflow: auto;
@@ -77,7 +77,7 @@ ul {
 
 li a {
     display: block;
-    color: black;
+    color: #000000;
     padding: 8px 16px;
     text-decoration: none;
     font-size: large;
@@ -85,11 +85,11 @@ li a {
 }
 
 li a.active {
-    background-color: rgb(0, 120, 255);
-    color: rgb(255,255,255);
+    background-color: #005A9C;
+    color: #FFEBCD;
 }
 
 li a:hover:not(.active) {
-    background-color: rgb(150,150,150);
-    color: rgb(255,255,255);
+    background-color: #666666;
+    color: #FFFFFF;
 }
